[package]
name = "cfg_attrs"
version = "2.0.0"
authors = ["Antikyth"]
description = "An alternative to #[cfg_attr(...)] that is easier to use with doc comments."
license = "MPL-2.0"
repository = "https://github.com/Antikyth/cfg_attrs"
readme = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "2"
